# overclock

./: .gitignore  .license_template  .rustfmt.toml  COPYRIGHT.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: axum_prefab.rs  benchmark.rs  custom.rs  echo.rs  gauge.rs  hello_world.rs  hyper.rs  hyper_prefab.rs  rocket_prefab.rs  root.rs  two.rs
src/: lib.rs
src/config/: file.rs  history.rs  mod.rs  persist.rs  test.rs  types.rs  versioned.rs
src/core/: actor.rs  channel.rs  mod.rs  registry.rs  result.rs  rt.rs  service.rs
src/prefab/: axum.rs  hyper.rs  mod.rs  one_for_one.rs  rocket.rs  tonic.rs
src/prefab/backserver/: mod.rs  server.rs
src/prefab/websocket/: mod.rs  websocket_listener.rs  websocket_receiver.rs  websocket_sender.rs
